--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
-.cv-header {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+* {
+    font: 400 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+body {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+/* .cv-header {
     color: rgb(88, 142, 230);
 }
 .cv-logo {
     width:200px ;
     height: 260px;
+} */
+.main-header {
+    height: 20px;
+    border: 1px solid red;
 }
+.main-container {
+    height: 20px;
+    border: 1px solid red;
+}
+.main-footer {
+    height: 20px;
+    border: 1px solid red;
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
