--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     font: 400 'Roboto', sans-serif;
     box-sizing: border-box;
 }
+
+html {
+    scroll-behavior: smooth; 
+  }
+
 body {
     min-height: 100vh;
     margin: 0;
@@ -10,7 +15,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
 }
+
 /* .cv-header {
     color: rgb(88, 142, 230);
 }
@@ -18,19 +28,62 @@ body {
     width:200px ;
     height: 260px;
 } */
+
 .main-header {
     height: 20px;
     border: 1px solid red;
 }
-.main-container {
+
+.main {
     height: 20px;
     border: 1px solid red;
+    
+    
 }
 .main-footer {
     height: 20px;
     border: 1px solid red;
 }
+
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    border: 1px solid red;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+  }
+  .nav-link {
+    color: rgb(49, 46, 189);
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: 0.5s;
+  }
+  .nav-link:hover {
+      color: rgba(49, 46, 189, 0.8);
+      font-weight: 400;
+  }
+  .section-item a {
+    color: #829985;
+    text-decoration: none;  
+    transition: color 0.5s;
+  }
+  .section-item a:hover {
+    color: #4d2323;
+  }
+  .section {
+    width: 50%;
+  }
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
   }
