--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 * {
     font: 400 'Roboto', sans-serif;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -9,12 +11,7 @@ html {
   }
 
 body {
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: stretch;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
@@ -30,27 +27,80 @@ body {
 } */
 
 .main-header {
-    height: 20px;
+    width: 100%;
+    border: 1px solid red;
+    background-color: #829985;
+}
+
+.contact-list {
+  list-style-type: none;
+  padding: 0;
+}
+.contact-list > li > a {
+  color: #829985;
+}
+.contact-list__item {
+  
+}
+
+/* .location {
+  list-style-image: url("assets/img/location.svg");
+}
+.email {
+  list-style-image: url("assets/img/email.svg");
+}
+.github {
+  list-style-image: url("assets/img/github.svg");
+}
+.telegram {
+  list-style-image: url("assets/img/telegram.svg");
+}
+.discord {
+  list-style-image: url("assets/img/discord.svg");
+} */
+
+.main {
+    width: 100%;
     border: 1px solid red;
 }
 
-.main {
-    height: 20px;
-    border: 1px solid red;
-    
-    
-}
 .main-footer {
     height: 20px;
     border: 1px solid red;
 }
 
 .container {
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
     max-width: 1440px;
     margin: 0 auto;
     border: 1px solid red;
+  }
+  #profile {
+    padding: 20px 0;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    align-items: center;
+  }
+  .logo-container {
+    background: no-repeat  0 -45px url("assets/img/cv.jpg");
+    background-size: cover;
+    /* border: 1px solid red; */
+    width: 200px;
+    height: 200px; 
+    border-radius: 50%;  
+  }
+  .main-section-logo {
+    border-radius: 50%;
+      /* border: 1px solid red; */
+      width: 100%;
+      height: 100%;
+  }
+  
+  .nav {
+    width: 100%;
   }
 
   .nav-list {
@@ -60,7 +110,7 @@ body {
     list-style: none;
   }
   .nav-link {
-    color: rgb(49, 46, 189);
+    color: #fff;
     padding: 0 20px;
     line-height: 50px;
     text-decoration: none;
@@ -71,6 +121,11 @@ body {
       color: rgba(49, 46, 189, 0.8);
       font-weight: 400;
   }
+
+  .section-title {
+    color: #829985;
+  }
+
   .section-item a {
     color: #829985;
     text-decoration: none;  
@@ -93,4 +148,19 @@ body {
     text-transform: uppercase;
     letter-spacing: 5px;
     color: #829985;
+  }
+  .section-item {
+    position: relative;
+    padding-left: 30px;
+  }
+  
+  .section-item::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0px;
+    width: 10px;
+    height: 10px; 
+    border: 1px solid #829985;
+    border-radius: 50%;
   }
