--- a/style.css
+++ b/style.css
@@ -63,28 +63,24 @@ body {
 .main {
   display: flex;
   flex-wrap: wrap;
-    width: 100%;
-    border: 1px solid red;
-}
-
-.main-footer {
-    height: 20px;
-    border: 1px solid red;
+  width: 100%;
+  border: 1px solid red;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1440px;
-    margin: 0 auto;
-    border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1440px;
+  margin: 0 auto;
   }
+
   #profile {
-    padding: 20px 0;
+    padding: 50px 0;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     align-items: center;
+    border-bottom: 15px solid #c5bda5;
   }
   .logo-container {
     background: no-repeat  0 -45px url("assets/img/cv.jpg");
@@ -126,12 +122,18 @@ body {
 
   .section {
     width: 50%;
+    padding: 15px 0 50px;
+    border-bottom: 1px solid #829985;
   }
 
   .section-title {
     padding: 15px 0;
     position: relative;
     color: #829985;
+  }
+
+  .section li {
+    line-height: 40px;
   }
 
   .profile__title {
@@ -189,7 +191,8 @@ body {
   }
 
   .skills__list,
-  .courses__list {
+  .courses__list,
+  .projects__list {
     list-style: none;
   }
 
@@ -215,4 +218,34 @@ body {
   .code {
     line-height: 0.1mm;
     font-size: 15px;
+    color: #af0b0b;
   }
+  .code span {
+    font-weight: 700;
+    font-style: italic;
+    color: #4d2323;
+  }
+
+  .main-footer {
+    display: flex;
+    padding: 20px 0;
+    border: 1px solid transparent;
+    background-color: #829985;
+    color: #fff;
+  }
+
+  .main-footer__block {
+    width: 100%;
+  }
+  
+  .main-footer a {
+    margin-right: auto;
+    color: #fff;
+  }
+
+  .main-footer__span {
+    font-weight: 700;
+    padding-right: 20px;
+  }
+  
+  
