--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
-    font: 400 'Roboto', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -11,6 +10,7 @@ html {
   }
 
 body {
+  font: 400 'Roboto', sans-serif;
     padding: 0 10px;
     justify-content: stretch;
     font-size: 18px;
@@ -75,12 +75,22 @@ body {
   }
 
   #profile {
+    position: relative;
     padding: 50px 0;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     align-items: center;
-    border-bottom: 15px solid #c5bda5;
+    border-bottom: none;
+  }
+  #profile::after {
+    position: absolute;
+    bottom: 0;
+    left: center;
+    content: "";
+    width: 100%;
+    height: 15px;
+    background-color: #c5bda5;
   }
   .logo-container {
     background: no-repeat  0 -45px url("assets/img/cv.jpg");
@@ -136,6 +146,9 @@ body {
     line-height: 40px;
   }
 
+  .section__about-me {
+    line-height: 30px;
+  }
   .profile__title {
     padding: 20px 0;
   }
