--- a/style.css
+++ b/style.css
@@ -79,43 +79,55 @@ body {
     position: relative;
     padding: 50px 0;
     display: flex;
-    justify-content: space-evenly;
+    
     width: 100%;
+    flex-wrap: wrap;
     align-items: center;
     border-bottom: none;
+    /* border: 1px solid red; */
   }
   #profile::after {
     position: absolute;
+    left: 0;
     bottom: 0;
-    left: center;
     content: "";
     width: 100%;
     height: 15px;
     background-color: #c5bda5;
   }
   .logo-container {
+    display: flex;
+  }
+  .logo-container,
+  .profile__title {
+    margin: 0 auto;
+    width: auto;
+    /* border: 1px solid red; */
+  }
+  .logo {
     background: no-repeat  0 -45px url("assets/img/cv.jpg");
     background-size: cover;
     /* border: 1px solid red; */
-    min-width: 200px;
-    min-height: 200px; 
-    border-radius: 50%;  
-  }
-  .main-section-logo {
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
-      /* border: 1px solid red; */
+  }
+  /* .main-section-logo {
+    border-radius: 50%;
+      border: 1px solid red;
       width: 100%;
       height: 100%;
-  }
+  } */
   
   .nav {
+    display: flex;
     width: 100%;
   }
 
   .nav-list {
+    flex-direction: row;
+    margin-left: auto;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
     list-style: none;
   }
   .nav-link {
@@ -173,12 +185,15 @@ body {
   .profile__title:after {
     content: "";
     position: absolute;
-    left: 22.5%;
     top: 100%;
-    width: 50%;
+    width: 0;
     height: 2px;
     background-color: #829985;
     
+  }
+
+  .profile__title:hover::after {
+    width: 60%;
   }
 
   .section-item a {
@@ -193,8 +208,46 @@ body {
     width: 50%;
   }
   @media (max-width: 768px) {
+
+    #profile {
+      align-self: center;
+      flex-direction: column;
+    }
+
+    .logo-container,
+    .profile__title {
+      width: 50%;
+      margin-bottom: 20px;
+    }
+
+    .profile__title {
+      text-align: center;
+    }
+
+    .section-title {
+      width: auto;
+    }
+
+    .nav {
+
+    }
+    .nav-list {
+      text-align: center;
+      margin: 0 auto;
+      flex-direction: column;
+    }
+    
     .section {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      /* border: 1px solid red; */
       width: 100%;
+    }
+
+    .main-footer__block {
+      padding: 0 10px;
+      /* border: 1px solid red; */
     }
   }
   .section-title {
@@ -236,6 +289,7 @@ body {
     color: #af0b0b;
   }
   .code span {
+    width: 100%;
     font-weight: 700;
     font-style: italic;
     color: #4d2323;
@@ -250,17 +304,22 @@ body {
   }
 
   .main-footer__block {
+    justify-content: center;
     width: 100%;
-  }
-  
-  .main-footer a {
-    margin-right: auto;
-    color: #fff;
+    font-weight: 700;
+    align-items: center;
   }
 
   .main-footer__span {
-    font-weight: 700;
-    padding-right: 20px;
+    margin-right: 30px;
+  }
+  
+  .main-footer a {
+    color: #fff;
+  }
+
+  #rc-link {
+    margin-left: auto;
   }
 
   .nav-item > a {
